Add ability to toggle between comparison years

--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,12 @@
           <input type="radio" name="category" id="category-income" value="income" />
           <label for="category-income">Income-Linked</label> -->
         </form>
+        <form id="comparisons">
+          <input type="radio" name="view" id="compare-two-years-ago" value="two-years-ago" />
+          <label for="compare-two-years-ago">Compare to 2015</label>
+          <input type="radio" name="view" id="compare-one-year-ago" value="one-year-ago" checked="checked" />
+          <label for="compare-one-year-ago">Compare to 2016</label>
+        </form>
         <form id="filters">
           <input type="radio" name="fortyForty" id="school-all" checked="checked" />
           <label for="school-all">All Schools</label>
