Update sources and temporarily clean out at-risk funds to avoid double counting

--- a/app/index.html
+++ b/app/index.html
@@ -212,9 +212,10 @@
         <p class="sources"><a href="/data/FY17 Initial School Budget Allocation Data (2.16.16).xlsx">Initial Allocations for FY17</a>, DC Public Schools. File provided February 24, 2016</p>
         <p class="sources"><a href="/data/FY15 to FY16 Budgeted Enrollment (Final).xlsx">Budgeted Enrollments for FY15 and FY16</a>, DC Public Schools. File provided April 17, 2015</p>
         <p class="sources"><a href="/data/FY16 to FY17 Budgeted Enrollment.xlsx">Budgeted Enrollments for FY16 and FY17</a>, DC Public Schools. File provided March 2, 2016</p>
+        <p class="sources"><a href="/data/FY18 Initial Budget Data.xlsx">Initial Allocations for FY18</a>, DC Public Schools. File provided April 22, 2017</p>
         <p class="sources"><a href="http://www.learndc.org/schoolprofiles">Additional school information</a> provided by the <a href="http://osse.dc.gov">Office of the State Superintendent of Education</a>. Retrieved January 25, 2015.</p>
         <p class="sources"><a href="/data/data.csv">Download and remix our data.</a> <a href="https://github.com/code-for-dc-edu/dcps-budget">Fork us on Github.</a></p>
-        <p class="sources">Published April 2016 as a public domain work under the <a href="http://creativecommons.org/publicdomain/zero/1.0/">CC0 License</a>.</p>
+        <p class="sources">Published April 2017 as a public domain work under the <a href="http://creativecommons.org/publicdomain/zero/1.0/">CC0 License</a>.</p>
       </div>
     </div>
 
