--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
     <title>Per Student Funding</title>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-    <link href='http://fonts.googleapis.com/css?family=Lato:300,300italic,400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lato:300,300italic,400,700' rel='stylesheet' type='text/css'>
 
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
